DNN_Trial/bash_scripts/VIME/VIME_Odyssey_V1_944465.err
Traceback (most recent call last):
  File "train.py", line 9, in <module>
    from utils.load_data import load_data
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/utils/load_data.py", line 406
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
srun: error: stud-000: task 0: Exited with exit code 1
Traceback (most recent call last):
  File "train.py", line 9, in <module>
    from utils.load_data import load_data
  File "/home/mburu/Master_Thesis/master-thesis-da/DNN_Trial/utils/load_data.py", line 406
    <<<<<<< HEAD
    ^
SyntaxError: invalid syntax
srun: error: stud-000: task 0: Exited with exit code 1
